# therapy-session-rag

./: .aiignore  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  DEPLOY.md  Dockerfile  IDEAS.md  IMPLEMENTATION_PLAN.md  INCIDENT_RESPONSE.md  LAUNCH_READINESS.md  OBSERVABILITY.md  README.md  VENDORS.md  blog-draft.md  docker-compose.observability.yml  docker-compose.yml  error-documentation.md  fly.toml  lessons-learned.md  pyproject.toml
.claude/: settings.json
.claude/commands/: lint.md  migrate.md  prime.md  test.md
.github/workflows/: ci.yml
.ralph/: PROMPT_build.md  PROMPT_plan.md
alembic/: env.py
alembic/versions/: 014f56a4df24_add_conversation_tables.py  26cb062ab77b_add_video_chat_support.py  a1b2c3d4e5f6_position_one_schema.py  a3b4c5d6e7f8_homework_items.py  a7b8c9d0e1f2_session_therapist_notes.py  b2c3d4e5f6a7_auth_tokens.py  b4c5d6e7f8a9_reminders_and_notification_prefs.py  b8c9d0e1f2a3_analytics_retain_forever_and_category.py  c3d4e5f6a7b8_assessments.py  c9d0e1f2a3b4_search_vectors.py  d0e1f2a3b4c5_intake_invitations.py  d4e5f6a7b8c9_therapist_invites.py  e1f2a3b4c5d6_billing_usage.py  e5f6a7b8c9d0_organization_disabled_at.py  f2a3b4c5d6e7_webhooks.py  f58e35082c80_initial_migration_all_tables.py  f6a7b8c9d0e1_user_lockout_and_totp.py
analytics/dbt/: README.md  dbt_project.yml  profiles.yml.example
analytics/dbt/macros/: get_properties_field.sql
analytics/dbt/seeds/: subscription_tier_list.csv
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/models/staging/: _staging.yml  stg_consents.sql  stg_events.sql  stg_experiment_assignments.sql  stg_experiment_metrics.sql  stg_experiments.sql  stg_organizations.sql  stg_session_chunks.sql  stg_sessions.sql  stg_transcripts.sql  stg_users.sql
dbt_project/seeds/: dim_time_seed.csv
dbt_project/snapshots/: consent_snapshot.sql
dbt_project/tests/: assert_consent_before_session.sql  assert_positive_session_duration.sql
dev/: __init__.py  __main__.py  cache.py  cli.py  config.py  dev_config.toml  hasher.py  pipeline.py
dev/eval/: __init__.py  query.py
dev/stages/: __init__.py  chunk.py  embed.py  load.py  transcribe.py
docs/: DEPLOYMENT.md  ROADMAP.md
frontend/: dashboard.js  index.html  style.css  vitest.config.js
infra/aws/: README.md  acm.tf  alarms.tf  alb.tf  backend.tf.example  ecs.tf  iam.tf  locals.tf  network.tf  outputs.tf  rds.tf  redis.tf  route53.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/observability/: otel-collector-config.yaml  prometheus.yml  tempo.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
internal/: README.md
internal/analytics/: dashboard.js  package.json  style.css
internal/analytics/__tests__/: dashboard.test.js
mobile/: .gitignore  README.md  app.json  metro.config.js  package.json  tsconfig.json  types.ts
mobile/app/: _layout.tsx  chat.tsx  index.tsx  sessions.tsx
mobile/components/: CitationCard.tsx  CrisisBanner.tsx  Message.tsx
mobile/lib/: api.ts  auth.ts  secure_store.ts
personal-rag/: README.md  feed.yaml
scripts/: e2e_test.sh  init-db.sql  ralph-loop.sh  run_dbt.sh  seed_demo.py
specs/: SPEC.md
src/: main.py
src/api/v1/: __init__.py  dependencies.py  router.py
src/cli/: __init__.py  admin.py
src/core/: __init__.py  admin_gate.py  auth.py  billing_gate.py  config.py  crypto.py  csrf.py  data_access_audit.py  database.py  event_middleware.py  exceptions.py  health.py  logging.py  observability.py  pagination.py  security.py  telemetry.py  tenant.py
src/evaluation/: README.md  __init__.py  clinical_accuracy.py  eval_suite.py  grounding.py  hallucination_detector.py  relevance_scorer.py
src/models/: __init__.py
src/models/db/: __init__.py  api_key.py  assessment.py  auth_token.py  base.py  billing_usage.py  consent.py  conversation.py  event.py  experiment.py  homework_item.py  intake_form.py  intake_invitation.py  intake_response.py  magic_link.py  organization.py  session.py  (+9 more)
src/repositories/: analytics_repo.py  api_key_repo.py  auth_token_repo.py  chunk_repo.py  consent_repo.py  conversation_repo.py  event_repo.py  experiment_repo.py  homework_repo.py  intake_repo.py  magic_link_repo.py  patient_themes_repo.py  search_repo.py  session_recap_repo.py  session_repo.py  therapist_invite_repo.py  transcript_repo.py  vector_search_repo.py  webhook_repo.py
src/services/: admin_service.py  analytics_service.py  assessment_service.py  auth_service.py  billing_service.py  chat_service.py  claude_client.py  consent_service.py  conversation_service.py  data_export_service.py  deepgram_client.py  email_service.py  embedding_client.py  embedding_service.py  event_service.py  experiment_service.py  feature_flags.py  homework_service.py  intake_service.py  invite_service.py  magic_link_service.py  pdf_service.py  rate_limiter.py  search_service.py  session_service.py  storage_service.py  summarization_service.py  themes_service.py  totp_service.py  transcription_service.py  video_room_service.py  webhook_dispatcher.py  webhook_service.py
src/workers/: __init__.py  embedding_worker.py  reminder_scheduler.py  summarization_worker.py  transcription_worker.py  webhook_delivery_worker.py
tests/: conftest.py
tests/evaluation/: conftest.py  test_grounding.py  test_recap_eval.py  test_retrieval_eval.py
tests/integration/: conftest.py  test_analytics_api.py  test_auth_api.py  test_billing_webhook_api.py  test_consent_api.py  test_database.py  test_experiment_api.py  test_full_pipeline.py  test_safety.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  next-env.d.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
web/app/: global-error.tsx  globals.css  layout.tsx
web/components/: AppShell.tsx  AudioRecorder.tsx  ChatSurface.tsx  MobileNav.tsx  SessionPlayer.tsx  SubscriptionBanner.tsx
web/e2e/: consent-and-session.spec.ts  invite-therapist.spec.ts  patient-chat.spec.ts  signup-and-login.spec.ts
web/lib/: api.ts  assessment.ts  auth.ts  serverApi.ts  types.ts
(+235 files in other folders)
