[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "therapy-session-rag"
version = "0.1.0"
description = "Therapy session recording, transcription, and RAG chatbot platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",
    # Redis & Queue
    "redis>=5.0.0",
    "rq>=1.16.0",
    # Storage
    "minio>=7.2.0",
    # AI/ML
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "tiktoken>=0.5.0",
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "tenacity>=8.2.0",
    # Logging
    "structlog>=24.1.0",
    "email-validator>=2.3.0",
    "stripe>=15.0.1",
    "resend>=2.29.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "pyotp>=2.9.0",
    "reportlab>=4.4.10",
    "rq-scheduler>=0.14.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
    "opentelemetry-instrumentation-redis>=0.62b0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",

    # Linting & Formatting
    "ruff>=0.1.14",
    "mypy>=1.8.0",

    # Type stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",

    # Dev pipeline CLI
    "click>=8.1.0",
    "tomli>=2.0.0;python_version<'3.11'",
]
analytics = [
    "dbt-postgres>=1.9.0",
]
notifications = [
    "twilio>=9.0.0",
]

[project.scripts]
therapyrag = "src.main:run"
therapyrag-admin = "src.cli.admin:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-v --tb=short -m 'not evaluation'"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (require running services)",
    "evaluation: marks tests as RAG evaluation-harness tests (opt-in, hermetic)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from (sometimes intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]  # Unused arguments are common in pytest fixtures

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "minio.*",
    "rq.*",
    "deepgram.*",
    "pgvector.*",
    "pgvector.sqlalchemy",
]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "rq_scheduler",
    "rq_scheduler.*",
    "twilio",
    "twilio.*",
]
ignore_missing_imports = true
follow_untyped_imports = false

[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true
follow_untyped_imports = false

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "types-python-jose>=3.5.0.20260408",
]
